fixed items count container z-index

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -22,7 +22,7 @@
   position: absolute;
   top: 10px;
   background-color: #fff;
-  z-index: 10;
+  z-index: 500;
   left: 0;
   right: 0;
   width: 120px;
